--- a/kedafuncproj_deployment.yaml
+++ b/kedafuncproj_deployment.yaml
@@ -1,9 +1,9 @@
 data:
-  AzureWebJobsStorage: VXNlRGV2ZWxvcG1lbnRTdG9yYWdlPXRydWU=
-  AzureWebJobsServiceBus__credential: bWFuYWdlZGlkZW50aXR5
-  AzureWebJobsServiceBus__fullyQualifiedNamespace: a2VkYWZ1bmNzYi5zZXJ2aWNlYnVzLndpbmRvd3MubmV0
-  AzureWebJobsServiceBus__clientId: N2E5ZjExNWEtOWRkMC00ZjVkLWIzMmEtY2UxMWJlM2NhYTNl
-  FUNCTIONS_WORKER_RUNTIME: ZG90bmV0LWlzb2xhdGVk
+  AzureWebJobsStorage: <>
+  AzureWebJobsServiceBus__credential: <>
+  AzureWebJobsServiceBus__fullyQualifiedNamespace: <>
+  AzureWebJobsServiceBus__clientId: <>
+  FUNCTIONS_WORKER_RUNTIME: <>
 apiVersion: v1
 kind: Secret
 metadata:
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: workload-identity-sa
       containers:
       - name: kedafuncproj
-        image: ramyaliftrdocker/kedafuncproj:v2
+        image: <>
         env:
         - name: AzureFunctionsJobHost__functions__0
           value: ServiceBusFunc
@@ -62,7 +62,7 @@ metadata:
 spec:
   podIdentity:
       provider:  azure-workload  # Optional. Default: none
-      identityId: 7a9f115a-9dd0-4f5d-b32a-ce11be3caa3e
+      identityId: <>
 ---      
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
