--- a/kubernates_fedidentity.yaml
+++ b/kubernates_fedidentity.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    azure.workload.identity/client-id: "7a9f115a-9dd0-4f5d-b32a-ce11be3caa3e"
+    azure.workload.identity/client-id: <>
   name: "workload-identity-sa"
   namespace: "default"
