--- a/local.settings.json
+++ b/local.settings.json
@@ -3,8 +3,8 @@
     "Values": {
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "AzureWebJobsServiceBus__credential":"managedidentity",
-        "AzureWebJobsServiceBus__fullyQualifiedNamespace": "kedafuncsb.servicebus.windows.net",
-        "AzureWebJobsServiceBus__clientId":"7a9f115a-9dd0-4f5d-b32a-ce11be3caa3e",
+        "AzureWebJobsServiceBus__fullyQualifiedNamespace": "<>.servicebus.windows.net",
+        "AzureWebJobsServiceBus__clientId":"<>",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
     }
 }
